1. Метод .of [#515179]