@@ -1,12 +1,11 @@
 package ru.job4j.lambda;
 
-import java.util.Arrays;
 import java.util.List;
 import java.util.function.Consumer;
 
 public class RefMethod {
     public static void main(String[] args) {
-        List<String> names = Arrays.asList(
+        List<String> names = List.of(
                 "Ivan",
                 "Petr Arsentev"
         );
