@@ -3,11 +3,10 @@ package ru.job4j.stream;
 import org.junit.Test;
 
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
 
-import static org.junit.Assert.*;
 import static org.hamcrest.Matchers.is;
+import static org.junit.Assert.assertThat;
 
 public class MatrixToListTest {
 
@@ -19,7 +18,7 @@ public class MatrixToListTest {
                 {7, 8, 9},
                 {10, 11}
         };
-        List<Integer> expect = new ArrayList<>(Arrays.asList(
+        List<Integer> expect = new ArrayList<>(List.of(
                 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11
         ));
         List<Integer> actual = MatrixToList.convertMatrixToList(matrix);
